--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <camel.version>2.16.1</camel.version>
         <cdi.version>1.2</cdi.version>
+        <osgi.version>6.0.0</osgi.version>
         <pax-cdi.version>1.0.0.RC1</pax-cdi.version>
         <deltaspike.version>1.5.1</deltaspike.version>
         <javaee.version>7.0</javaee.version>
