--- a/samples/sjms/pom.xml
+++ b/samples/sjms/pom.xml
@@ -13,6 +13,7 @@
     <packaging>${packaging.type}</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
@@ -22,7 +23,6 @@
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -35,14 +35,14 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-client</artifactId>
             <version>${activemq.version}</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-broker</artifactId>
             <version>${activemq.version}</version>
-            <scope>provided</scope>
+            <scope>runtime</scope>
         </dependency>
+
     </dependencies>
 </project>
