--- a/samples/xml/pom.xml
+++ b/samples/xml/pom.xml
@@ -13,16 +13,24 @@
     <packaging>${packaging.type}</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
         </dependency>
 
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
+            <!-- That example only depends on Camel and CDI API -->
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
