--- a/samples/hello/pom.xml
+++ b/samples/hello/pom.xml
@@ -19,17 +19,15 @@
             <artifactId>cdi-api</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-core</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.camel</groupId>-->
+            <!--<artifactId>camel-core</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
             <version>${project.version}</version>
-            <!-- That example only depends on Camel and CDI API -->
-            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
