--- a/envs/osgi/pom.xml
+++ b/envs/osgi/pom.xml
@@ -12,7 +12,7 @@
     <name>Camel CDI :: Environments :: OSGi</name>
 
     <properties>
-        <karaf.version>3.0.5</karaf.version>
+        <karaf.version>4.0.3</karaf.version>
         <pax-exam.version>4.7.0</pax-exam.version>
         <gravia.version>1.1.0.Beta43</gravia.version>
     </properties>
@@ -96,10 +96,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.gogo.runtime</artifactId>
-            <version>0.16.2</version>
-            <scope>test</scope>
+            <groupId>org.apache.karaf.shell</groupId>
+            <artifactId>org.apache.karaf.shell.core</artifactId>
+            <version>${karaf.version}</version>
         </dependency>
 
         <!-- Karaf Features -->
