Use systemPropertyVariables instead of deprecated systemProperties

--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -93,7 +93,6 @@
 
         <profile>
             <id>wildfly-8.x</id>
-
             <build>
                 <plugins>
                     <plugin>
@@ -126,10 +125,10 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <excludedGroups>org.apache.camel.cdi.ee.category.WildFlyCamel</excludedGroups>
-                            <systemProperties>
+                            <systemPropertyVariables>
                                 <arquillian.launch>wildfly-8-managed</arquillian.launch>
                                 <jacoco.agent>${argLine}</jacoco.agent>
-                            </systemProperties>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
