--- a/envs/osgi/pom.xml
+++ b/envs/osgi/pom.xml
@@ -302,6 +302,9 @@
                     <excludes>
                         <exclude>**/CdiArquillianKarafTest.java</exclude>
                     </excludes>
+                    <systemPropertyVariables>
+                        <jacoco.agent>${argLine}</jacoco.agent>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
