Add Metrics sample

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>hello</module>
+        <module>metrics</module>
         <module>properties</module>
         <module>sjms</module>
         <module>xml</module>
