--- a/pom.xml
+++ b/pom.xml
@@ -491,7 +491,7 @@
             <dependency>
                 <groupId>org.wildfly.arquillian</groupId>
                 <artifactId>wildfly-arquillian-container-managed</artifactId>
-                <version>1.1.0.Alpha1</version>
+                <version>1.0.2.Final</version>
                 <scope>test</scope>
             </dependency>
 
