Reactivate OpenJDK Travis CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ script:
 
 jdk:
   - oraclejdk7
-# WildFly Arquillian plugin is crashing OpenJDK 7
-#  - openjdk7
+  - openjdk7
   - oraclejdk8
 
 notifications:
