--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ branches:
     - master
 
 install:
-  - mvn clean install -Dmaven.test.skip.exec
+  - mvn -B clean install -Dmaven.test.skip.exec
 
 script:
-  - mvn test -Pjacoco -Pweld -Pstandalone
-  - mvn test -Pjacoco -Powb -pl envs/se
-  - mvn test -Pjacoco -Pwildfly-8.x -pl envs/ee
-  - mvn test -Pjacoco -Pwildfly-9.x -pl envs/ee
-  - mvn test -Pjacoco -Pwildfly-camel -pl envs/ee
+  - mvn -B test -Pjacoco -Pweld -Pstandalone
+  - mvn -B test -Pjacoco -Powb -pl envs/se
+  - mvn -B test -Pjacoco -Pwildfly-8.x -pl envs/ee
+  - mvn -B test -Pjacoco -Pwildfly-9.x -pl envs/ee
+  - mvn -B test -Pjacoco -Pwildfly-camel -pl envs/ee
 
 jdk:
   - oraclejdk7
