--- a/envs/pom.xml
+++ b/envs/pom.xml
@@ -149,7 +149,7 @@
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>java-hamcrest</artifactId>
         </dependency>
 
         <dependency>
