--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -74,7 +74,7 @@
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>java-hamcrest</artifactId>
         </dependency>
 
         <dependency>
