--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <artifactId>camel-cdi-envs</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>camel-cdi-ee</artifactId>
@@ -283,7 +283,7 @@
                                         <!-- Remove DeltaSpike -->
                                         <replacement>
                                             <token><![CDATA[<module name="org\.apache\.deltaspike.*" />]]></token>
-                                            <value></value>
+                                            <value />
                                         </replacement>
                                     </replacements>
                                 </configuration>
