--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>camel-cdi-parent</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>camel-maven-plugin</artifactId>
