--- a/samples/metrics/pom.xml
+++ b/samples/metrics/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <artifactId>camel-cdi-samples</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>camel-cdi-sample-metrics</artifactId>
