--- a/samples/properties/pom.xml
+++ b/samples/properties/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <artifactId>camel-cdi-samples</artifactId>
-        <version>1.2.0</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-cdi-sample-properties</artifactId>
