--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
   - mvn -B test -Pjacoco -Pwildfly-9.x -pl envs/ee
   - mvn -B test -Pjacoco -Pwildfly-camel -pl envs/ee
   - mvn -B test -Pjacoco -Pkaraf,weld -pl envs/osgi/
+# OpenWebBeans faces class proxying issues in OSGi, see OWB-1103
 #  - mvn -B test -Pjacoco -Pkaraf,owb -pl envs/osgi/
 
 jdk:
