--- a/envs/se/pom.xml
+++ b/envs/se/pom.xml
@@ -61,6 +61,21 @@
                 <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties</argLine>
             </properties>
 
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <!-- Reactivate when OWB-1122 is fixed -->
+                                <exclude>**/ProgrammaticLookupTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
             <dependencies>
 
                 <!-- provided dependencies -->
