--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -13,9 +13,22 @@
     <description>Maven plugin to run Camel standalone</description>
 
     <dependencies>
+        <!-- we extend the exec-maven-plugin for this camel maven plugin -->
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.maven</groupId>
+                    <artifactId>maven-plugin-descriptor</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- As Camel requires Maven 3.x we can depend on an updated version of the plugin API -->
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.1.1</version>
         </dependency>
 
         <dependency>
