Temporary work-around to Weld EE Arquillian adpater archive scan issue

--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -31,6 +31,14 @@
 
         <!-- test dependencies -->
 
+        <!-- FIXME: should be removed when Weld EE Arquillian doesn't scan all classes -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core-xml</artifactId>
+            <version>${camel.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-depchain</artifactId>
