--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>0.7.6.201602180812</version>
+                    <configuration>
+                        <includes>
+                            <include>org/apache/camel/cdi/*</include>
+                        </includes>
+                    </configuration>
                 </plugin>
 
                 <plugin>
