--- a/envs/se/pom.xml
+++ b/envs/se/pom.xml
@@ -79,6 +79,8 @@
                             <excludes>
                                 <!-- Reactivate when OWB-1122 is fixed -->
                                 <exclude>**/ProgrammaticLookupTest.java</exclude>
+                                <!-- Reactivate when OWB-1126 is fixed -->
+                                <exclude>**/Xml*Test.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
