--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -174,6 +174,19 @@
                     <scope>runtime</scope>
                     <optional>true</optional>
                 </dependency>
+                <!-- Remove when OWB-1127 is fixed -->
+                <dependency>
+                    <groupId>org.apache.xbean</groupId>
+                    <artifactId>xbean-finder-shaded</artifactId>
+                    <version>4.4</version>
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.xbean</groupId>
+                    <artifactId>xbean-asm5-shaded</artifactId>
+                    <version>4.4</version>
+                    <scope>runtime</scope>
+                </dependency>
 
                 <dependency>
                     <groupId>org.slf4j</groupId>
